--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>ESTANCIA 25</title>
   <meta name="description" content="Estancia 25 es una plataforma abierta para proyectos artísticos y culturales esta parte es lo que aparece en Google como descriptor">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
