--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" alt="Carousel Bootstrap First" src="https://www.layoutit.com/img/sports-q-c-1600-500-1.jpg" />
+            <img class="d-block w-100" alt="Carousel Bootstrap First" src="images/image1.jpg" />
             <div class="carousel-caption">
               <h4>
                 First Thumbnail label
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" alt="Carousel Bootstrap Second" src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg" />
+            <img class="d-block w-100" alt="images/image2.jpg" />
             <div class="carousel-caption">
               <h4>
                 Second Thumbnail label
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" alt="Carousel Bootstrap Third" src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg" />
+            <img class="d-block w-100" alt="Carousel Bootstrap Third" src="images/image3.jpg" />
             <div class="carousel-caption">
               <h4>
                 Third Thumbnail label
